  been removed.  Only the lower level DM interface remains.

- Udev integration has been removed.  The library will not wait for
  udev to do anything, nor will it manipulate the flag bits that are
  only relevant to udev.  As a consequence, the DmOptions struct no
  longer exists; various APIs that used it now directly work with
  DmFlags.

- no longer uses bindgen
- no longer depends on env_logger, rand, or serde
- devicemapper-rs-sys has been folded into the main crate

devicemapper 0.34.4
===================
Recommended Rust toolchain version: 1.80.1
Recommended development release: Fedora 40

- Expose the message ioctl:
  https://github.com/stratis-storage/devicemapper-rs/pull/933

- Tidies and Maintenance:
  https://github.com/stratis-storage/devicemapper-rs/pull/934
  https://github.com/stratis-storage/devicemapper-rs/pull/932
  https://github.com/stratis-storage/devicemapper-rs/pull/931
  https://github.com/stratis-storage/devicemapper-rs/pull/930
  https://github.com/stratis-storage/devicemapper-rs/pull/929
  https://github.com/stratis-storage/devicemapper-rs/pull/928


devicemapper 0.34.3
===================
Recommended Rust toolchain version: 1.79.0
Recommended development release: Fedora 40

- Use once_cell instead of lazy_static for lazy statics:
  https://github.com/stratis-storage/devicemapper-rs/pull/917

- Increase nix dependency lower bound to 0.29.0:
  https://github.com/stratis-storage/devicemapper-rs/pull/922

- Increase tempfile dependency lower bound to 3.4.0:
  https://github.com/stratis-storage/devicemapper-rs/pull/926
  https://github.com/stratis-storage/devicemapper-rs/pull/925

- Tidies and Maintenance:
  https://github.com/stratis-storage/devicemapper-rs/pull/927
  https://github.com/stratis-storage/devicemapper-rs/pull/923
  https://github.com/stratis-storage/devicemapper-rs/pull/921
  https://github.com/stratis-storage/devicemapper-rs/pull/920
  https://github.com/stratis-storage/devicemapper-rs/pull/919