@@ -11,8 +11,7 @@ use std::{
     slice, str,
 };
 
-use nix::{errno, libc::ioctl as nix_ioctl};
-use retry::{delay::Fixed, retry_with_index, Error as RetryError, OperationResult};
+use nix::libc::ioctl as nix_ioctl;
 use semver::Version;
 
 use crate::{
@@ -33,12 +32,6 @@ const DM_CTL_PATH: &str = "/dev/mapper/control";
 
 /// Start with a large buffer to make BUFFER_FULL rare. Libdm does this too.
 const MIN_BUF_SIZE: usize = 16 * 1024;
-
-/// Number of device remove retry attempts
-const DM_REMOVE_RETRIES: usize = 5;
-
-/// Delay between remove attempts
-const DM_REMOVE_MSLEEP_DELAY: u64 = 200;
 
 /// Context needed for communicating with devicemapper.
 pub struct DM {
@@ -307,37 +300,8 @@ impl DM {
             Self::hdr_set_uuid(&mut hdr, uuid)?;
         }
 
-        debug!("Creating device {} (uuid={:?})", name, uuid);
         self.do_ioctl(dmi::DM_DEV_CREATE_CMD as u8, &mut hdr, None)
             .map(|(hdr, _)| hdr)
-    }
-
-    fn try_device_remove(
-        &self,
-        id: &DevId<'_>,
-        flags: DmFlags,
-    ) -> OperationResult<DeviceInfo, DmError> {
-        let mut hdr = match flags.to_ioctl_hdr(Some(id), DmFlags::DM_DEFERRED_REMOVE) {
-            Ok(hdr) => hdr,
-            Err(err) => {
-                return OperationResult::Err(err);
-            }
-        };
-
-        match self.do_ioctl(dmi::DM_DEV_REMOVE_CMD as u8, &mut hdr, None) {
-            Err(err) => {
-                if let DmError::Ioctl(op, hdr_in, hdr_out, errno) = err {
-                    if *errno == errno::Errno::EBUSY {
-                        OperationResult::Retry(DmError::Ioctl(op, hdr_in, hdr_out, errno))
-                    } else {
-                        OperationResult::Err(DmError::Ioctl(op, hdr_in, hdr_out, errno))
-                    }
-                } else {
-                    OperationResult::Err(err)
-                }
-            }
-            Ok((deviceinfo, _)) => OperationResult::Ok(deviceinfo),
-        }
     }
 
     /// Remove a DM device and its mapping tables.
@@ -348,17 +312,9 @@ impl DM {
     ///
     /// Valid flags: `DM_DEFERRED_REMOVE`
     pub fn device_remove(&self, id: &DevId<'_>, flags: DmFlags) -> DmResult<DeviceInfo> {
-        debug!("Removing device {}", id);
-        match retry_with_index(
-            Fixed::from_millis(DM_REMOVE_MSLEEP_DELAY).take(DM_REMOVE_RETRIES - 1),
-            |i| {
-                trace!("Device remove attempt {} of {}", i, DM_REMOVE_RETRIES);
-                self.try_device_remove(id, flags)
-            },
-        ) {
-            Ok(deviceinfo) => Ok(deviceinfo),
-            Err(RetryError { error, .. }) => Err(error),
-        }
+        let mut hdr = flags.to_ioctl_hdr(Some(id), DmFlags::DM_DEFERRED_REMOVE)?;
+        self.do_ioctl(dmi::DM_DEV_REMOVE_CMD as u8, &mut hdr, None)
+            .map(|(hdr, _)| hdr)
     }
 
     /// Change a DM device's name OR set the device's uuid for the first time.
@@ -379,7 +335,6 @@ impl DM {
         let mut hdr = flags.to_ioctl_hdr(None, DmFlags::DM_UUID)?;
         Self::hdr_set_name(&mut hdr, old_name)?;
 
-        debug!("Renaming device {} to {}", old_name, new);
         self.do_ioctl(dmi::DM_DEV_RENAME_CMD as u8, &mut hdr, Some(&data_in))
             .map(|(hdr, _)| hdr)
     }
@@ -413,12 +368,6 @@ impl DM {
             DmFlags::DM_SUSPEND | DmFlags::DM_NOFLUSH | DmFlags::DM_SKIP_LOCKFS,
         )?;
 
-        let action = if flags.contains(DmFlags::DM_SUSPEND) {
-            "Suspending"
-        } else {
-            "Resuming"
-        };
-        debug!("{} device {}", action, id);
         self.do_ioctl(dmi::DM_DEV_SUSPEND_CMD as u8, &mut hdr, None)
             .map(|(hdr, _)| hdr)
     }
@@ -429,7 +378,6 @@ impl DM {
     pub fn device_info(&self, id: &DevId<'_>) -> DmResult<DeviceInfo> {
         let mut hdr = DmFlags::default().to_ioctl_hdr(Some(id), DmFlags::empty())?;
 
-        trace!("Retrieving info for {}", id);
         self.do_ioctl(dmi::DM_DEV_STATUS_CMD as u8, &mut hdr, None)
             .map(|(hdr, _)| hdr)
     }
@@ -449,7 +397,6 @@ impl DM {
     ) -> DmResult<(DeviceInfo, Vec<(u64, u64, String, String)>)> {
         let mut hdr = flags.to_ioctl_hdr(Some(id), DmFlags::DM_QUERY_INACTIVE_TABLE)?;
 
-        trace!("Waiting on event for {}", id);
         let (hdr_out, data_out) = self.do_ioctl(dmi::DM_DEV_WAIT_CMD as u8, &mut hdr, None)?;
 
         let status = DM::parse_table_status(hdr.target_count, &data_out)?;
@@ -537,7 +484,6 @@ impl DM {
         // Flatten targets into a buf
         let data_in = cursor.into_inner();
 
-        trace!("Loading table \"{:?}\" for {}", targets, id);
         self.do_ioctl(dmi::DM_TABLE_LOAD_CMD as u8, &mut hdr, Some(&data_in))
             .map(|(hdr, _)| hdr)
     }
@@ -546,7 +492,6 @@ impl DM {
     pub fn table_clear(&self, id: &DevId<'_>) -> DmResult<DeviceInfo> {
         let mut hdr = DmFlags::default().to_ioctl_hdr(Some(id), DmFlags::empty())?;
 
-        trace!("Clearing inactive table for {}", id);
         self.do_ioctl(dmi::DM_TABLE_CLEAR_CMD as u8, &mut hdr, None)
             .map(|(hdr, _)| hdr)
     }
@@ -561,7 +506,6 @@ impl DM {
     pub fn table_deps(&self, id: &DevId<'_>, flags: DmFlags) -> DmResult<Vec<Device>> {
         let mut hdr = flags.to_ioctl_hdr(Some(id), DmFlags::DM_QUERY_INACTIVE_TABLE)?;
 
-        trace!("Querying dependencies for {}", id);
         let (_, data_out) = self.do_ioctl(dmi::DM_TABLE_DEPS_CMD as u8, &mut hdr, None)?;
 
         if data_out.is_empty() {
@@ -665,7 +609,6 @@ impl DM {
             DmFlags::DM_NOFLUSH | DmFlags::DM_STATUS_TABLE | DmFlags::DM_QUERY_INACTIVE_TABLE,
         )?;
 
-        trace!("Retrieving table status for {}", id);
         let (hdr_out, data_out) = self.do_ioctl(dmi::DM_TABLE_STATUS_CMD as u8, &mut hdr, None)?;
 
         let status = DM::parse_table_status(hdr_out.target_count, &data_out)?;
@@ -678,7 +621,6 @@ impl DM {
     pub fn list_versions(&self) -> DmResult<Vec<(String, u32, u32, u32)>> {
         let mut hdr = DmFlags::default().to_ioctl_hdr(None, DmFlags::empty())?;
 
-        trace!("Listing loaded target versions");
         let (_, data_out) = self.do_ioctl(dmi::DM_LIST_VERSIONS_CMD as u8, &mut hdr, None)?;
 
         let mut targets = Vec::new();
@@ -732,7 +674,6 @@ impl DM {
         data_in.extend(msg.as_bytes());
         data_in.push(b'\0');
 
-        debug!("Sending target message \"{}\" to {}", msg, id);
         let (hdr_out, data_out) =
             self.do_ioctl(dmi::DM_TARGET_MSG_CMD as u8, &mut hdr, Some(&data_in))?;
 
@@ -756,7 +697,6 @@ impl DM {
     pub fn arm_poll(&self) -> DmResult<DeviceInfo> {
         let mut hdr = DmFlags::default().to_ioctl_hdr(None, DmFlags::empty())?;
 
-        trace!("Issuing device-mapper arm poll command");
         self.do_ioctl(dmi::DM_DEV_ARM_POLL_CMD as u8, &mut hdr, None)
             .map(|(hdr, _)| hdr)
     }
