@@ -66,8 +66,6 @@
 #![warn(missing_docs)]
 
 #[macro_use]
-extern crate log;
-#[macro_use]
 extern crate nix;
 
 #[cfg(test)]
